CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(ITK_V3D_Plugins)


FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)


FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )


FIND_PATH(V3D_BINARY_DIR v3d)

INCLUDE_DIRECTORIES(
  ${ITK_V3D_Plugins_SOURCE_DIR}/basic_c_fun
  )

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Testing)

