INCLUDE_DIRECTORIES( V3DInterface )

ADD_SUBDIRECTORY(V3DInterface)
ADD_SUBDIRECTORY(InvertIntensity)
# ADD_SUBDIRECTORY(ConnectedComponents)
ADD_SUBDIRECTORY(IntensityTransformation)
# ADD_SUBDIRECTORY(InvertIntensity)
# ADD_SUBDIRECTORY(Morphology)
# ADD_SUBDIRECTORY(RegionGrowing)
ADD_SUBDIRECTORY(Smoothing)
# ADD_SUBDIRECTORY(Thresholding)
