INCLUDE_DIRECTORIES( 
  Common
  V3DInterface
  )

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(V3DInterface)


ADD_SUBDIRECTORY(IntensityTransformation)
ADD_SUBDIRECTORY(MathMorphology)
ADD_SUBDIRECTORY(Smoothing)
ADD_SUBDIRECTORY(Thresholding)
ADD_SUBDIRECTORY(EdgeDetection)
ADD_SUBDIRECTORY(LevelSets)
ADD_SUBDIRECTORY(RegionGrowing)
ADD_SUBDIRECTORY(Classification)
ADD_SUBDIRECTORY(Registration)
