CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

SET(PLUGIN_NAME ITKInvertIntensity)

PROJECT(${PLUGIN_NAME})

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  )

SET(QtITK_SRCS ITKInvertIntensity.cxx )

QT4_WRAP_CPP(QT_MOC_SRCS ITKInvertIntensity.h)

ADD_LIBRARY(${PLUGIN_NAME} SHARED ${QtITK_SRCS} ${QT_MOC_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ITKIO ${QT_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME}
  LIBRARY DESTINATION ${INSTALLATION_DIRECTORY}/${PLUGIN_NAME} COMPONENT RuntimeLibraries
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
  )
